Created create and get for all apis
